# backend/models/meme.model.js
@@ -7,7 +7,7 @@ module.exports = mongoose => {
             category: { type: mongoose.Schema.Types.ObjectId, ref: 'category' },
             image_public_id: String,
             image_url: String,
-            up_vote: Number,
-            down_vote: Number
+            likes: [{ type: mongoose.Schema.Types.ObjectId, ref: 'user' }],
+            unlikes: [{ type: mongoose.Schema.Types.ObjectId, ref: 'user' }]
         },{timestamps:true}))
 }
